# cubedesu

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
src/: facelet_model.rs  geometry_model.rs  lib.rs  main.rs  vec3.rs
wasm/: cubedesu.wasm
