[package]
name = "cubedesu"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cubedesu"
path = "src/lib.rs"

[dependencies]
strum = "0.21"
strum_macros = "0.21"
macroquad = "0.3.10"

[dev-dependencies]
proptest = "1.0.0"